JumpScript/tests/baselines/reference/parserComputedPropertyName33.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName33.jump(3,6): error TS2304: Cannot find name 'e'.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName33.jump(4,6): error TS2304: Cannot find name 'e2'.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName33.jump(4,12): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName33.jump(5,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName33.jump (4 errors) ====
    class C {
        // No ASI
        [e] = 0
         ~
!!! error TS2304: Cannot find name 'e'.
        [e2]() { }
         ~~
!!! error TS2304: Cannot find name 'e2'.
               ~
!!! error TS1005: ';' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.